# deepseek-hs

./: CHANGELOG.md  LICENSE  deepseek-hs.cabal  openai-sdk-hs.cabal
test/: Main.hs
